--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  color: var(--color-primary);
+  font-size: 2.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-form input {
+  border-radius: 4px 0 0 4px;
+  border: 1px solid var(--color-secondary);
+  font-size: 1.5rem;
+  padding: 8px 12px;
+  width: 100%;
+  outline: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-form button {
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  padding: 8px 24px;
+}
+
+.App-form button[disabled] {
+  background-color: var(--color-neutral);
 }
