--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+:root {
+  --color-primary: #EC6F7F;
+  --color-secondary: #639A7F;
+  --color-neutral: #bbb;
+}
+
 body {
+  background-color: #E3E3DC;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +17,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  background-color: var(--color-secondary);
+  border: 0;
+  color: white;
+  transform: scale(1);
+  transition: transform 0.15s;
+}
+
+button:not([disabled]):hover {
+  transform: scale(1.05);
+}
+
+button[disabled] {
+  cursor: not-allowed !important;
 }
