--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -18,8 +18,7 @@
   cursor: pointer;
 }
 
-.App-listItem > button {
-  background-color: var(--color-primary);
+.App-listDelete {
   border-radius: 50%;
   height: 20px;
   margin-left: 8px;
